2009-04-07 sponge     * BOB prevent jvac from optimizing out thread-group code from -10
Monotone-Parent: d9d9a841df9c39eef361a9921889f72453fe1503
Monotone-Revision: 91bd86329a458a5e064af7aa5abf3662aec61dab

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-04-07T03:01:39
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-04-07 sponge
+    * BOB prevent jvac from optimizing out thread-group code from -10
+
 2009-04-07 zzz
     * NTCP: Prevent occasional NPE introduced in -4
     * streamr: Synchronize DatagramMaker
