2009-04-08 sponge     * More hopeful fixups to the infamous orpahned tunnel problem. *Sigh*
Monotone-Parent: fc5ab185e9d9dccae35d3bff0f3978c10be37ce4
Monotone-Revision: 9b73a50d356f49e9aadaae4cf86681b718c0d56b

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-04-08T11:55:51
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-04-08 sponge
+    * More hopeful fixups to the infamous orpahned tunnel problem. *Sigh*
+
 2009-04-08 zzz
     * IPV6/localhost:
       - Enable IPv6 stack in the JVM, hopefully won't break anything
