2009-04-10 sponge     * More BOB threadgroup fixes, plus debug dump when things go wrong.     * Fixes to streaminglib, I2CP, which are related to the TG problem.     * JavaDocs fixups.
Monotone-Parent: 7b157bec894f59cad3200424b476342fa9ad3372
Monotone-Revision: 8aacbbbacb79ee5a65534a5601eea1246c51866c

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-04-10T23:12:41
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-04-10 sponge
+    * More BOB threadgroup fixes, plus debug dump when things go wrong.
+    * Fixes to streaminglib, I2CP, which are related to the TG problem.
+    * JavaDocs fixups.
+
 2009-04-08 sponge
     * More hopeful fixups to the infamous orpahned tunnel problem. *Sigh*
 
