2009-04-11 sponge     * i2ptunnel janitorial work and fixes on most locks.       Some locks still need work, and are marked with LINT in the comment.       Just grep for "LINT" to see where the remaining places are.
Monotone-Parent: 99f5cc17784af0b560ad3ad437e5701f3c8b1ec0
Monotone-Revision: c06ed6aab297ea837746dfa5dacb1a8f78d8d3dc

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-04-11T13:55:38
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-04-11 sponge
+    * i2ptunnel janitorial work and fixes on most locks.
+      Some locks still need work, and are marked with LINT in the comment.
+      Just grep for "LINT" to see where the remaining places are.
+
 2009-04-10 sponge
     * More BOB threadgroup fixes, plus debug dump when things go wrong.
     * Fixes to streaminglib, I2CP, which are related to the TG problem.
