--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2009-04-13 Mathiasdm
+    * Added I2P version and GUI version to desktopgui
+    * Tweaks to the tray icon menu
+    * Some starting work on a GUI general configuration menu
+    * Bugfix allowing spaces in directory structure
+
 2009-04-13 welterde
     * small fix in the eepproxy
 
