* Bugfix on tray icon updating     * Some more work on the general configuration menu       (currently not added to the tray icon menu yet, needs more work)     * Tweaked the desktopgui logo
Monotone-Parent: f2f30046d275e7b25b5279676cf7213ec23d8303
Monotone-Revision: 08bf1eb3101ffee3ba28d8036328c3571606e8cc

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-04-13T17:27:35
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,10 @@
 2009-04-13 Mathiasdm
+    * Bugfix on tray icon updating
+    * Some more work on the general configuration menu
+      (currently not added to the tray icon menu yet, needs more work)
+    * Tweaked the desktopgui logo
+
+2009-04-13 Mathiasdm
     * Added I2P version and GUI version to desktopgui
     * Tweaks to the tray icon menu
     * Some starting work on a GUI general configuration menu
