2009-04-17 sponge     * Catch NPE in NTCP.       This possibly augments fix 2009-04-11 welterde below.     * Various LINT on NTCP sources, and removal of space-wasting       spaces at end of lines in sources touched.
Monotone-Parent: 08bf1eb3101ffee3ba28d8036328c3571606e8cc
Monotone-Revision: 611c7dc9e30d2cf1da53a20b1487ea75857db8f8

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-04-17T13:11:16
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2009-04-17 sponge
+    * Catch NPE in NTCP.
+      This possibly augments fix 2009-04-11 welterde below.
+    * Various LINT on NTCP sources, and removal of space-wasting
+      spaces at end of lines in sources touched.
+
 2009-04-13 Mathiasdm
     * Bugfix on tray icon updating
     * Some more work on the general configuration menu
