2009-04-17 sponge     * setIP wants to be a static method in the class, but it produces       warnings about it being static from other code.
Monotone-Parent: 611c7dc9e30d2cf1da53a20b1487ea75857db8f8
Monotone-Revision: 8dec7adb10741a9186049691cc44f87ee3e8b487

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-04-17T13:28:05
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
 2009-04-17 sponge
+    * setIP wants to be a static method in the class, but it produces
+      warnings about it being static from other code.
+
+2009-04-17 sponge
     * Catch NPE in NTCP.
       This possibly augments fix 2009-04-11 welterde below.
     * Various LINT on NTCP sources, and removal of space-wasting
