2009-04-17 sponge     * fixed setIP, just be sure to distclean before building :-)     * more lint taken care of as well.
Monotone-Parent: 8dec7adb10741a9186049691cc44f87ee3e8b487
Monotone-Revision: e26fa9cbcc023c4c1d8bdc4eb8dbd4a964bb6148

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-04-17T13:45:47
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
 2009-04-17 sponge
+    * fixed setIP, just be sure to distclean before building :-)
+    * more lint taken care of as well.
+
+2009-04-17 sponge
     * setIP wants to be a static method in the class, but it produces
       warnings about it being static from other code.
 
