* Update versions, package release
Monotone-Parent: e26fa9cbcc023c4c1d8bdc4eb8dbd4a964bb6148
Monotone-Revision: 564994d51878d929eed2b00bb178b61876ed946c

Monotone-Author: complication@mail.i2p
Monotone-Date: 2009-04-18T22:33:00
Monotone-Branch: i2p.i2p
Monotone-Tag: i2p-0.7.2

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2009-04-18  0.7.2 released
+
+2009-04-18 Complication
+    * Update versions, package release
+
 2009-04-17 sponge
     * fixed setIP, just be sure to distclean before building :-)
     * more lint taken care of as well.
