* Fix typo in "news.xml", no build number increase.
Monotone-Parent: 564994d51878d929eed2b00bb178b61876ed946c
Monotone-Revision: 401f2e769d7507a315783ec22c880a0e866194bd

Monotone-Author: complication@mail.i2p
Monotone-Date: 2009-04-18T23:08:40
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-04-18 Complication
+    * Fix typo in "news.xml", no build number increase.
+
 * 2009-04-18  0.7.2 released
 
 2009-04-18 Complication
