2009-04-25 sponge     * I2PSessionMuxedImpl atomic fixes     * BOB fixes. This should be the final bug wack. Good Luck to everybody!
Monotone-Parent: b5e4685f8bd4848a01e02d73e37fa0b8ee449966
Monotone-Revision: 40618503ea9748aedee73aaf002482424adc1f72

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-04-25T00:02:38
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-04-25 sponge
+    * I2PSessionMuxedImpl atomic fixes
+    * BOB fixes. This should be the final bug wack. Good Luck to everybody!
+
 2009-04-23 zzz
     * Blocklist: cleanup
     * eepget: handle -h, --help, bad options, etc.
