2009-04-27 sponge     * more BOB fixes, complete with warnings when things go wrong, and       success messages when things turn around and go right. Terminates       early so that applications wait no more than 10 seconds or so.     * Reversed a few earlier patches that caused some odd behavior.     * Changed some core println()'s to debugging messages.
Monotone-Parent: 2817a835176697c4c9cef6921a4e7eef2d5ed4d1
Monotone-Revision: 5401181de2088780f15a018566a65ee35a25c92e

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-04-27T17:09:47
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,10 @@
+2009-04-27 sponge
+    * more BOB fixes, complete with warnings when things go wrong, and
+      success messages when things turn around and go right. Terminates
+      early so that applications wait no more than 10 seconds or so.
+    * Reversed a few earlier patches that caused some odd behavior.
+    * Changed some core println()'s to debugging messages.
+
 2009-04-27 zzz
     * Build files:
       - New updaterWithJettyFixes target, build it for pkg
