--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,23 @@
+2009-05-01 zzz
+    * Build files:
+      - Fix up susidns build file so it will work with gcj
+      - Add consoleDocs target
+    * Client: Fix race NPE (thanks sponge)
+    * Console: fix ERR-UDP Disabled and Inbound TCP host/port not set
+    * I2CP: Fix race NPE
+    * I2PTunnel:
+      - Try to fix locking to prevent duplicate destinations when using
+        the new option new-dest-on-resume. Still not right for shared clients
+        but should be better for non-shared.
+    * Router console:
+      - Add jbigi and cpu info to logs.jsp
+    * Session key manager:
+      - Log before a hang maybe
+    * URL Launcher:
+      - Launcher on linux was stopping after trying opera, whether it succeeded or failed.
+        Now it keeps going to try firefox, etc. as designed.
+      - Extend default delay from 5s to 15s so it will reliably start
+
 2009-04-27 sponge
     * more BOB fixes, complete with warnings when things go wrong, and
       success messages when things turn around and go right. Terminates
