2009-05-03 sponge     * More hopeful fixes for BOB.     * Added new Robert ID to snark
Monotone-Parent: 618390aeaeb16b1af04e6f9baf5f0733b44ac38a
Monotone-Revision: 40606168f4086dbe122e96b533df4f24b5e4d87d

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-05-03T16:02:07
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-05-03 sponge
+    * More hopeful fixes for BOB.
+    * Added new Robert ID to snark
+
 2009-05-01 zzz
     * Build files:
       - Fix up susidns build file so it will work with gcj
