--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-05-06 sponge
+    * Hopefully the last fixes for BOB.
+    * Fixes to prevent race in client-side I2CP and Notifier.
+
 2009-05-03 sponge
     * More hopeful fixes for BOB.
     * Added new Robert ID to snark
