* Improvements to popup menu rightclick action     * Added general configuration options (still not available by default)     * General fixes     * Added ant build options (irc says eche|on would like that ;))
Monotone-Parent: 6c10fcb35bbacab1d3add8997d49bc5575f15a54
Monotone-Revision: 622324a8f0f863b7b4eaaa26385228a65c71edf0

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-05-06T16:17:58
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2009-05-06 Mathiasdm
+    * Improvements to popup menu rightclick action
+    * Added general configuration options (still not available by default)
+    * General fixes
+    * Added ant build options (irc says eche|on would like that ;))
+
 2009-05-06 sponge
     * Hopefully the last fixes for BOB.
     * Fixes to prevent race in client-side I2CP and Notifier.
