--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
 2009-05-07 zzz
+    * Add nibble.i2p to proxy list and hosts.txt
+
+2009-05-07 zzz
     * Addressbook: Name the thread
     * Console:
       - More IE button fixes, try harder to not refresh the iframe after shutdown
@@ -65,6 +68,7 @@
     * RouterConsole: iframe tweaks
     * StatisticsManager: Cleanup
     * Streaming: Don't let jrandom yell so loud
+    * Tunnel Pool: Don't self-destruct if more than 6 IB tunnels configured
 
 2009-04-25 sponge
     * I2PSessionMuxedImpl atomic fixes
