--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-05-07 mkvore
+    * SAM: version 3 added
+    * SAM: blocking case corrected on simultaneous client connection (v.1-3)
 2009-05-07 zzz
     * Add nibble.i2p to proxy list and hosts.txt
 
