2009-05-09 sponge     * fixed OOM on lock (woops! my bad!)
Monotone-Parent: 9cdab8e186f77c375fd81913d3b3c20e5ca69ca2
Monotone-Revision: 4ad028f436647b957e6531243fb3348156d5eb51

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-05-09T18:19:03
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-05-09 sponge
+    * fixed OOM on lock (woops! my bad!)
+
 2009-05-08 Mathiasdm
     * desktopgui: moved files to stop polluting the namespace
           (everything now in net.i2p.desktopgui)
