--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,12 @@
+2009-05-11 zzz
+    * Connect client: Fix NPE when used with advanced i2ptunnel features
+    * Context: Don't instantiate unused AdminManager
+    * logs.jsp: Put critical log at the top
+    * NetDb: Don't accept stores of our own LeaseSets or RouterInfo
+
 2009-05-11 mkvore
     * SAM: fix: removed ERROR level logging when a client disconnects
+
 2009-05-09 sponge
     * merge
 
@@ -14,6 +21,7 @@
 2009-05-07 mkvore
     * SAM: version 3 added
     * SAM: blocking case corrected on simultaneous client connection (v.1-3)
+
 2009-05-07 zzz
     * Add nibble.i2p to proxy list and hosts.txt
 
