--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-05-12 mkvore
+    * SAM: fix: warnings when generating javadoc
+
 2009-05-11 zzz
     * Connect client: Fix NPE when used with advanced i2ptunnel features
     * Context: Don't instantiate unused AdminManager
