--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-05-12 sponge
+    * BOB clean up, change println's to _log.warn, bump BOB version
+    * I2PSessionMuxedImpl.java changes as per zzz, and they test OK for me.
+
 2009-05-11 zzz
     * Connect client: Fix NPE when used with advanced i2ptunnel features
     * Context: Don't instantiate unused AdminManager
