--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2009-05-16  0.7.3 released
+
+2009-05-16 Complication
+    * Update versions, package release
+
 2009-05-12 sponge
     * BOB clean up, change println's to _log.warn, bump BOB version
     * I2PSessionMuxedImpl.java changes as per zzz, and they test OK for me.
