* General configuration enabled by default     * General configuration speed tab works completely
Monotone-Parent: 31ab45aaed880aa1d8295541b813adb312582f17
Monotone-Revision: e9c81b8ce06374554965eacae3ae64df995b26df

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-05-20T19:58:55
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-05-20 Mathiasdm
+    * General configuration enabled by default
+    * General configuration speed tab works completely
+
 2009-05-17 zzz
     * Merge i2p.i2p.zzz.upnp branch
      * Major changes:
