* desktopgui:       - Updating works in general config       - Switched to Swingworker threads for improved responsiveness       - version increase to 0.1.3
Monotone-Parent: 97debae941408086b9389ad1bbbb85fc52676901
Monotone-Revision: 95763d9df324eb8754552cf7531e8fd5e2e9ec3c

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-05-21T22:32:34
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-05-22 Mathiasdm
+    * desktopgui:
+      - Updating works in general config
+      - Switched to Swingworker threads for improved responsiveness
+
 2009-05-21 zzz
     * Router Watchdog:
       - Log memory stats
