* Router netDB:       - Added flags to the netDB page
Monotone-Parent: 95763d9df324eb8754552cf7531e8fd5e2e9ec3c
Monotone-Revision: 90a1460bf65f140d0502d1d60486aca5d8cb20e5

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-05-23T16:40:18
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-05-23 Mathiasdm
+    * Router netDB:
+      - Added flags to the netDB page
+
 2009-05-22 Mathiasdm
     * desktopgui:
       - Updating works in general config
