SAMv1 and SAMv3 : logging some exception at INFO level
Monotone-Parent: b977f0e1e1ca57e78d599943dcbf492e474c631a
Monotone-Revision: bacd7b0c0c60182da4b71b56b597193be5ec1e41

Monotone-Author: mkvore-commit@mail.i2p
Monotone-Date: 2009-05-24T16:04:57
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-05-24 mkvore
+    * SAM: logging some exceptions at INFO level instead of ERROR
+
 2009-05-23 Mathiasdm
     * Router netDB:
       - Added flags to the netDB page
