-5 SAMv1 and SAMv3 : logging some exception at INFO level
Monotone-Parent: bacd7b0c0c60182da4b71b56b597193be5ec1e41
Monotone-Revision: afcd808741bf31d75eee2639e19d5e8946b62756

Monotone-Author: mkvore-commit@mail.i2p
Monotone-Date: 2009-05-24T16:12:39
Monotone-Date: 2009-05-24T16:17:11
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,6 +1,21 @@
 2009-05-24 mkvore
     * SAM: logging some exceptions at INFO level instead of ERROR
 
+2009-05-24 zzz
+    * Connection limits / throttle:
+      - Better limits when no inbound TCP
+        (limit inbound and outbound separately)
+      - Don't offer to SSU introduce when near connection limit
+    * Console:
+      - Move flags from icons/ to docs/icons
+      - peers.jsp cleanup
+      - Add readme_zh.html
+    * GeoIP:
+      - Check netDb SSU IP too
+      - Check whole netDb at startup
+    * NTCP: Log who is sending us big messages
+    * UPnP: Move logging from wrapper log to router log
+
 2009-05-23 Mathiasdm
     * Router netDB:
       - Added flags to the netDB page
