--- a/history.txt
+++ b/history.txt
@@ -1,9 +1,19 @@
+2009-05-26 zzz
+    * Console:
+      - configlogging.jsp cleanup
+      - Flags tweak
+    * NetDb:
+      - Don't send our own hash in the don't-include list when exploring
+      - Remove any pending write when removing a RouterInfo
+      - Cleanup to use routerHash()
+    * Streaming: Hopefuly fix infinite loop in the SYN queue handler
+
 2009-05-25 zzz
     * GeoIP:
       - Save our own location in the config
       - Check whole netDb at startup (last try didn't work)
     * NTCP:
-      - Increasse routerinfo send frequency to every 90m (was 9h)
+      - Increase routerinfo send frequency to every 90m (was 9h)
       - Don't send 3 floodfill infos at startup or with routerinfo
     * Profile Organizer: Increase min fast peers based on
       number of local destinations
