* Throttling extension by looking at sendProcessingTime
Monotone-Parent: e3f95aef96e6442470b2c2f0d8b894916af7b58f
Monotone-Revision: a31b36718ee0103fe4a1c7230c819aa9ed92b4a9

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-05-26T17:24:31
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-05-26 Mathiasdm
+    * Throttling extension by looking at sendProcessingTime
+
 2009-05-26 zzz
     * Console:
       - configlogging.jsp cleanup
