* Increased sendProcessingTime limits and added testSuccessTime       to avoid unwanted throttling
Monotone-Parent: a31b36718ee0103fe4a1c7230c819aa9ed92b4a9
Monotone-Revision: 1cb888f51146c7a02f61f86f959c104b739eeee1

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-05-27T09:01:14
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-05-27 Mathiasdm
+    * Increased sendProcessingTime limits and added testSuccessTime
+      to avoid unwanted throttling
+
 2009-05-26 Mathiasdm
     * Throttling extension by looking at sendProcessingTime
 
