* Increase sendProcessingTime some more, add a property to configure.       Configure with 'router.defaultProcessingTimeThrottle'.
Monotone-Parent: 1cb888f51146c7a02f61f86f959c104b739eeee1
Monotone-Revision: 3f1440742ee1704400c8ea02b09d4196f886f838

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-05-27T13:26:51
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
 2009-05-27 Mathiasdm
+    * Increase sendProcessingTime some more, add a property to configure.
+      Configure with 'router.defaultProcessingTimeThrottle'.
+
+2009-05-27 Mathiasdm
     * Increased sendProcessingTime limits and added testSuccessTime
       to avoid unwanted throttling
 
