* added big fat start/stop lock into BOB     * added zap command to shut down BOB... now we need a way to start it       after it stops. :-)
Monotone-Parent: 3f1440742ee1704400c8ea02b09d4196f886f838
Monotone-Revision: d2424406b9f3877644a1334df71313b6cba018e4

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-05-29T21:14:08
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-05-29 sponge
+    * added big fat start/stop lock into BOB
+    * added zap command to shut down BOB... now we need a way to start it
+      after it stops. :-)
+
 2009-05-27 Mathiasdm
     * Increase sendProcessingTime some more, add a property to configure.
       Configure with 'router.defaultProcessingTimeThrottle'.
