2009-06-06 sponge     * Added BOB's liscense to liscenses     * Janitorial javadoc fixes *sigh*     * bump to -13
Monotone-Parent: 6c156e7a2b9a87e01a5243cfcc9ee62b0fabe334
Monotone-Revision: 18f8d036ea76e4949661f607276af832899709a9

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-06-06T06:27:29
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2009-06-06 sponge
+    * Added BOB's liscense to liscenses
+    * Janitorial javadoc fixes *sigh*
+    * bump to -13
+
 2009-06-05 sponge
     * Merge and bump to -12
 
