--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,21 @@
+2009-06-07 zzz
+    * Build file:
+      - Add updaterWithJettyFixesAndGeoIP, use it in pkg for one release
+      - Cleanups
+    * Console:
+      - netdb.jsp cleanup
+      - tunnels.jsp cleanup
+    * Timestamper:
+      - Use locale country if geoip unavailable
+    * Transport:
+      - Lower min NTCP idle time to 3m (was 5m)
+      - Increase SSU conn limit by 33%
+    * UPnP: Fix deprecation warning
+    * Watchdog:
+     - Defang him again
+
 2009-06-06 sponge
-    * Added BOB's liscense to liscenses
+    * Added BOB's license to licenses
     * Janitorial javadoc fixes *sigh*
     * bump to -13
 
@@ -15,8 +31,15 @@
       time out. What should happen is the streaming lib should cause an IO
       error to the pending read or write.
 
+2009-06-05 zzz
+    * Build file:
+      - Add license info for launch4j includes
+    * Console:
+      - 16x11 transparent flags for ch and np, thanks anonim!
+
 2009-06-04 zzz
     * Console:
+      - Update geoip file to June 3 version
       - Hide some controls if no wrapper on configservice.jsp
     * I2PTunnel:
       - Fix bug where delayed-open and close-on-idle tunnels would
