2009-06-08 sponge     * Fixed NPE and some other goofups in BOB.     * BOB bump version
Monotone-Parent: 753b1b77b578b19d11159bd5bd0f684fd55842b0
Monotone-Revision: 227c0129ba7e24f691194c90bb07a71a1125471d

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-06-08T08:34:54
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2009-06-08 sponge
+    * Fixed NPE and some other goofups in BOB.
+    * BOB bump version
+
 2009-06-07 zzz
     * Build file:
       - Add updaterWithJettyFixesAndGeoIP, use it in pkg for one release
