2009-06-08 sponge     * Removed BOB debugging as-per zzz
Monotone-Parent: 227c0129ba7e24f691194c90bb07a71a1125471d
Monotone-Revision: 0e578ad5d0416888e92afb37442909d54df007ba

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-06-08T12:24:20
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
 2009-06-08 sponge
+    * Removed BOB debugging as-per zzz
+
+2009-06-08 sponge
     * Fixed NPE and some other goofups in BOB.
     * BOB bump version
 
