2009-06-08 sponge     * Last commit for this cycle. All debugging except for WARN removed.       I can use the visit command to debug now anyway.
Monotone-Parent: 0e578ad5d0416888e92afb37442909d54df007ba
Monotone-Revision: 75959e65e8e95711879365025ccd26b27aeab157

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2009-06-08T14:42:44
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,8 @@
 2009-06-08 sponge
+    * Last commit for this cycle. All debugging except for WARN removed.
+      I can use the visit command to debug now anyway.
+
+2009-06-08 sponge
     * Removed BOB debugging as-per zzz
 
 2009-06-08 sponge
