* NTCP: Fix startup race NPE
Monotone-Parent: 75959e65e8e95711879365025ccd26b27aeab157
Monotone-Revision: fb4e35c6a8804e23eaa86ea323baff9cb2ae2528

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-09T03:06:18
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2009-06-09 zzz
+    * NTCP: Fix startup race NPE (thanks postman!)
+
 2009-06-08 sponge
     * Last commit for this cycle. All debugging except for WARN removed.
       I can use the visit command to debug now anyway.
