Upgrade to izpack 4.3.0 and add a short script to fix Vista install problems. (previous izpack was 3.7.2 from 2005-04-22)
izpack 4.3.0 from :
http://dist.codehaus.org/izpack/releases/4.3.0/IzPack-install-4.3.0.jar
SHA1 f06da6b26ac2c68fed64ab38980352989b8d8841
(no signatures or sha1sums found on website, and the jar is unsigned)
License: Apache 2.0

upack izpack:
java -jar IzPack-install-4.3.0.jar
or
java -jar IzPack-install-4.3.0.jar -console

get the standalone-compiler.jar from the installation lib/ directory:
SHA1 6d2b4a5657bfb864a333b1c4b1c0f8223aa57d80
(no signatures or sha1sums found on website, and the jar is unsigned)

This fixes the bug with the install windows centered in all the
workspaces, not the current workspace. And who knows what other
bugs in the last 4 years.

To fix Vista (and presumably Windows 7) permissiom problems,
add a run-privileged flag for those, and run the new fixperms.bat
which calls icacls to add the privileges to the install directory.

Add support for 6 more language packs found in the new release.
Change from ISO3 codes to native language names.

Disable creation of the i2p.tar.bz2 file in build.xml
(distributed as i2pheadless-0.7.x.tar.bz2), as izpack 4.3.0 now
supports headless installation with java -jar i2pinstall.exe -console.
Update INSTALL.txt and INSTALL-headless.txt accordingly.

Monotone-Parent: 45e511e6ee78a69aae0fd0f4ea9692206faef18b
Monotone-Revision: 748d13dc0d9592286f71aecee99e9cb94f2d1a97

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-06-11T13:31:27

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -6,16 +6,20 @@ and package up the appropriate installer by running:
   ant pkg
 
 This will produce a few key files:
-* i2p.tar.bz2:   the headless installation
-* install.jar:   the GUI installer
-* i2pupdate.zip: the update package
+* install.jar:    the GUI and console installer
+* i2pinstall.exe: the GUI and console installer wrapped for cross-platform execution
+* i2pupdate.zip:  the update package
 
-From there, you can follow the headless installation instructions
-with the headless installer, run the GUI installer, or deploy
-the update into an existing installation.
+From there, you can run the headless (console mode) installer:
+  java -jar i2pinstall.exe -console
+
+Or run the GUI installer:
+  java -jar i2pinstall.exe
+
+Or move the update file into an existing installation directory and restart.
 
 You will need to have ant installed from http://ant.apache.org/
-(1.5 or newer)
+(1.7.0 or newer)
 
 Supported JVMs:
   Windows: Latest available from http://java.sun.com/ (1.5+ supported)
