--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+* 2009-06-12  0.7.4 released
+
+2009-06-12 Complication
+    * Update versions, package release
+
 2009-06-09 zzz
     * NTCP: Fix startup race NPE (thanks postman!)
 
